--- a/app/views/cohorts/_slots.html.erb
+++ b/app/views/cohorts/_slots.html.erb
@@ -38,7 +38,7 @@
             </table>
           </td>
         <% else %>
-          <td class="times"></td>
+          <td class="times-long"></td>
         <% end %>
       <% end %>
     </tr>
