--- a/app/views/loads/_slots.html.erb
+++ b/app/views/loads/_slots.html.erb
@@ -36,7 +36,7 @@
 	    </table>
 	  </td>
         <% else %>
-          <td class="times"></td>
+          <td class="times-long"></td>
         <% end %>
       <% end %>
     </tr>
