--- a/app/assets/stylesheets/screen/schoolmaster.css.scss
+++ b/app/assets/stylesheets/screen/schoolmaster.css.scss
@@ -19,7 +19,7 @@
   color: white;
   text-align:center;
   text-shadow: 0px 1px 1px #fff;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#bbf), to(#B03060));
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#541424), to(#B03060));
 }
 
 #navigation {
