--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+  <div class="field">
+    <%= f.label :rank %><br />
+    <%= f.text_field :rank %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
