--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing schools</h1>
+<h1>Schools and Research Centers</h1>
 
 <table>
   <tr>
@@ -10,10 +10,7 @@
 
 <% @schools.each do |school| %>
   <tr>
-    <td><%= school.name %></td>
-    <td><%= link_to 'Show', school %></td>
-    <td><%= link_to 'Edit', edit_school_path(school) %></td>
-    <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to school.name, school %></td>
   </tr>
 <% end %>
 </table>
