use number_field for rank

--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :rank %><br />
-    <%= f.text_field :rank %>
+    <%= f.number_field :rank %>
   </div>
   <div class="actions">
     <%= f.submit %>
