--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -4,6 +4,7 @@
   <tr>
     <th>Title</th>
     <th>Enrolment</th>
+    <th>Date</th>
     <th>Academic</th>
     <th>Status</th>
     <th></th>
@@ -14,7 +15,7 @@
 <% @proposals.each do |proposal| %>
   <tr>
     <td><%= truncate(proposal.title, :length => 50) %></td>
-    <td><%= proposal.updated_at %></td>
+    <td><%= proposal.updated_at.strftime("%F %T") %></td>
     <td><%= proposal.enrolment %></td>
     <td><%= proposal.academic %></td>
     <td><%= proposal.status %></td>
