add date to proposals listing

--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing proposals</h1>
+<h1>Proposals</h1>
 
 <table>
   <tr>
     <th>Title</th>
-    <th>Enrolment</th>
     <th>Date</th>
+    <th>Student</th>
     <th>Academic</th>
     <th>Status</th>
     <th></th>
