added delete record button

--- a/app/views/academics/_records.html.erb
+++ b/app/views/academics/_records.html.erb
@@ -1,13 +1,18 @@
 <h3 class="edit-head">Records</h3>
 <% if can? :destroy, @academic %>
   <div class="edit">
-    <%= link_to '[+]', new_record_path(:academic_id => @academic) %>
+    <%= link_to '[+]', new_record_path(academic_id: @academic) %>
   </div>
 <% end %>
 <ul>
   <% @academic.records.each do |record| %>
     <li>
-      <%= link_to record.broker.name, record.broker.template % record.authorid, :target => "_blank" %>
+      <%= link_to record.broker.name, record.broker.template % record.authorid, target: "_blank" %>
+      <% if can? :destroy, record %>
+        <div class="edit">
+          <%= link_to '[-]',  record, confirm: 'Are you sure?', method: :delete %>
+	</div>
+      <% end %>
     </li>
   <% end %>
 </ul>
