enhanced proposals and enrolments

--- a/app/views/proposals/index.csv.erb
+++ b/app/views/proposals/index.csv.erb
@@ -1,5 +1,7 @@
 <% @proposals.each do |proposal| %>
-    "<%= truncate(proposal.title, :length => 80) -%>", <%= proposal.enrolment -%>
+    "<%= truncate(proposal.title, :length => 80) -%>", <%= proposal.last -%>
+,    <%= proposal.first -%>
+,    <%= proposal.number -%>
 ,    <%= proposal.academic -%>
 ,    <%= proposal.status %>
 <% end %>
