--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -24,7 +24,7 @@
 </h1>
 
 <p>
-  <%= @cohort.description.html_safe %>
+    <%= @cohort.description.html_safe if @cohort.description %>
 </p>
 
 <% if can? :read, Academic %>
@@ -47,7 +47,7 @@
 
 <% if @instances.any? %>
 <% @instances.map(&:slots).sum.group_by { |x| x[:load].semester }.sort.each do |semester, slots| %>
-  <h2>Timetable <%= academic_year_code(@date) %>, Semester <%= semester %>.</h2>
+  <h2><%= @title %> <%= academic_year_code(@date) %>, Semester <%= semester %>.</h2>
   <%= render :partial => 'slots', :object => slots %>
 <% end %>
 <% end %>
