--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -21,7 +21,7 @@
 <% @projects.sort_by { |project| project.author.last_first }.each do |project| %>
   <tr>
     <td><%= project.author.last_first %></td>
-    <td><%= project.supervisor.a_last %></td>
+    <td><%= project.supervisor.a_last if project.supervisor %></td>
     <td><%= project.examiners.map { |x| x.a_last }.to_sentence %></td>
   </tr>
 <% end %>
