--- a/app/views/cohorts/_slots.html.erb
+++ b/app/views/cohorts/_slots.html.erb
@@ -1,4 +1,4 @@
-<% rows = %w{ 09 10 11 12 13 14 15 16 17 18 } %>
+<% rows = %w{ 09 10 11 12 13 14 15 16 17 18 19 20 } %>
 <% cols = %w{ Mon Tue Wed Thu Fri } %>
 
 <% slots_by_hr = slots.group_by { |x| x[:hr] } %>
