--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Rank</th>
     <th>Name</th>
     <th></th>
     <th></th>
@@ -10,6 +11,7 @@
 
 <% @schools.each do |school| %>
   <tr>
+    <td><%= school.rank %></td>
     <td><%= link_to school.name, school %></td>
   </tr>
 <% end %>
