--- a/app/views/directions/show.html.erb
+++ b/app/views/directions/show.html.erb
@@ -9,6 +9,7 @@
 </p>
 
 <table>
+<!--
 <tr>
   <td align="right"><b>Midterm mark:</b></td>
   <td align="right"><%= @direction.midterm_mark %></td>
@@ -23,6 +24,62 @@
   <td align="right"><b>Report mark:</b></td>
   <td align="right"><%= @direction.report_mark %></td>
 </tr>
+-->
+<tr>
+  <td align="right"><b>Mark A:</b></td>
+  <td align="right"><%= @direction.mark_a %></td>
+  <td>
+    <%= Direction::WEIGHT[:a] %>%
+    (<%= link_to Direction::LABEL[:a], "#", title: Direction::TEXT[:a] %>)
+  </td>
+</tr>
+
+<tr>
+  <td align="right"><b>Mark B:</b></td>
+  <td align="right"><%= @direction.mark_b %></td>
+  <td>
+    <%= Direction::WEIGHT[:b] %>%
+    (<%= link_to Direction::LABEL[:b], "#", title: Direction::TEXT[:b] %>)
+  </td>
+</tr>
+
+<tr>
+  <td align="right"><b>Mark C:</b></td>
+  <td align="right"><%= @direction.mark_c %></td>
+  <td>
+    <%= Direction::WEIGHT[:c] %>%
+    (<%= link_to Direction::LABEL[:c], "#", title: Direction::TEXT[:c] %>)
+  </td>
+</tr>
+
+<tr>
+  <td align="right"><b>Mark D:</b></td>
+  <td align="right"><%= @direction.mark_d %></td>
+  <td>
+    <%= Direction::WEIGHT[:d] %>%
+    (<%= link_to Direction::LABEL[:d], "#", title: Direction::TEXT[:d] %>)
+  </td>
+</tr>
+
+<tr>
+  <td align="right"><b>Mark E:</b></td>
+  <td align="right"><%= @direction.mark_e %></td>
+  <td>
+    <%= Direction::WEIGHT[:e] %>%
+    (<%= link_to Direction::LABEL[:e], "#", title: Direction::TEXT[:e] %>)
+  </td>
+</tr>
+
+<tr>
+  <td align="right"><b>Mark F:</b></td>
+  <td align="right"><%= @direction.mark_f %></td>
+  <td>
+    <%= Direction::WEIGHT[:f] %>%
+    (<%= link_to Direction::LABEL[:f], "#", title: Direction::TEXT[:f] %>)
+  </td>
+</tr>
+
+
 </table>
 
 <p>
